--- a/.github/workflows/npm-publish-on-release.yml
+++ b/.github/workflows/npm-publish-on-release.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '18'
           cache: 'npm'
 
       - name: Cache npm dependencies
@@ -26,10 +26,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Run tests
-        run: |
-          npm ci
-          npm test
+        run: npm test
+
+      - name: Build the project
+        run: npm run build
 
       - name: Validate package version
         run: |
@@ -44,6 +48,4 @@ jobs:
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
 
       - name: Publish to npm
-        run: |
-          npm ci
-          npm publish --access public --loglevel verbose
+        run: npm publish --access public --loglevel verbose
