--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "description": "Validate math expressions in JavaScript and TypeScript. Fast, lightweight, and accurate.",
   "keywords": [
     "math",
-    "validation",
-    "expressions",
+    "parser",
     "javascript",
     "typescript",
-    "parser"
+    "validation",
+    "expressions"
   ],
   "author": {
-    "name": "Bruno Rocha",
-    "email": "bruno@khaneland.com"
+    "name": "Kledenai",
+    "email": "me@kledenai.com"
   },
   "repository": {
     "type": "git",
@@ -24,14 +24,22 @@
   },
   "homepage": "https://github.com/kledenai/mathcheck#readme",
   "license": "MIT",
-  "main": "./dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.js"
+    }
+  },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsc",
-    "test": "jest",
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
     "lint": "eslint src",
     "start": "node dist/index.js",
     "prepare": "npm run build",
@@ -40,7 +48,6 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^8.19.0",
@@ -49,6 +56,7 @@
     "eslint-define-config": "^2.1.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
+    "tsup": "^8.4.0",
     "typescript": "^5.7.2"
   }
 }
